gitops-main/base/services/delivery-service/allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: delivery-service
spec:
  podSelector:
    matchLabels:
      app: delivery-service
  policyTypes:
    - Egress
  
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: vcluster-kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
